# squashrun

./: README.md  meson.build
src/: main.c
